// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Histogram /> render when data passed in renders the correct amount of bars 1`] = `
.c0 {
  max-width: 248px;
}

.c0 .tick line {
  opacity: 0.1;
}

.c0 .tick text {
  color: #747474;
}

.c0 .tick:first-child line {
  opacity: 0.5;
}

.c0 .bar {
  fill: #3AB5F0;
  cursor: pointer;
  opacity: 0.7;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c0 .bar:hover {
  fill: #0f8dc9;
}

<svg
  className="c0"
  color="#3AB5F0"
  data={
    Array [
      Object {
        "name": 0,
        "value": 24.083983203359328,
      },
      Object {
        "name": 1,
        "value": 44.31979215871516,
      },
      Object {
        "name": 2,
        "value": 66.23076923076923,
      },
      Object {
        "name": 3,
        "value": 89.14472455648927,
      },
      Object {
        "name": 4,
        "value": 116.11572700296736,
      },
      Object {
        "name": 5,
        "value": 136.61666666666667,
      },
    ]
  }
  height={160}
  width={248}
/>
`;

exports[`<Histogram /> update when data changes should call the update method or the chart 1`] = `
.c0 {
  max-width: 248px;
}

.c0 .tick line {
  opacity: 0.1;
}

.c0 .tick text {
  color: #747474;
}

.c0 .tick:first-child line {
  opacity: 0.5;
}

.c0 .bar {
  fill: #3AB5F0;
  cursor: pointer;
  opacity: 0.7;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c0 .bar:hover {
  fill: #0f8dc9;
}

<svg
  className="c0"
  color="#3AB5F0"
  data={
    Array [
      Object {
        "name": 0,
        "value": 24.083983203359328,
      },
      Object {
        "name": 1,
        "value": 44.31979215871516,
      },
      Object {
        "name": 2,
        "value": 66.23076923076923,
      },
      Object {
        "name": 3,
        "value": 89.14472455648927,
      },
      Object {
        "name": 4,
        "value": 116.11572700296736,
      },
      Object {
        "name": 5,
        "value": 136.61666666666667,
      },
    ]
  }
  height={160}
  width={248}
/>
`;

exports[`<Histogram /> update when data changes should call the update method or the chart 2`] = `
.c0 {
  max-width: 248px;
}

.c0 .tick line {
  opacity: 0.1;
}

.c0 .tick text {
  color: #747474;
}

.c0 .tick:first-child line {
  opacity: 0.5;
}

.c0 .bar {
  fill: #3AB5F0;
  cursor: pointer;
  opacity: 0.7;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c0 .bar:hover {
  fill: #0f8dc9;
}

<svg
  className="c0"
  color="#3AB5F0"
  data={Array []}
  height={160}
  width={248}
/>
`;
